# Quantum-State-Simulator

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  exceptions.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  gates.py  simulator.py  tensor.py
backend/app/models/: __init__.py  schemas.py
backend/src/tensorq/: main.py
backend/src/tensorq/api/: routes.py
backend/src/tensorq/core/: __init__.py  measurement.py  simulator.py  tensor.py
backend/src/tensorq/models/: __init__.py
backend/tests/: conftest.py  test_api.py  test_gates.py  test_measurement.py  test_simulator.py  test_tensor.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CircuitBuilder.tsx  CircuitGrid.tsx  GatePalette.tsx  ProbabilityChart.tsx  StatePanel.tsx  Toolbar.tsx
frontend/lib/: api.ts  circuit.ts  types.ts
