[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorq-engine"
version = "1.0.0"
description = "High-performance quantum circuit simulator (state-vector evolution)."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TensorQ-Engine" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "eval_type_backport>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["tensorq"]
